# owl-portability-layer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
docs/: adding_adapters.md  architecture.md  migration_guide.md
examples/: demo_agentcore_parallel_governance.py  demo_five_platform_portability.py  demo_four_platform_portability.py  demo_migration_check.py  demo_offboarding_validation.py  demo_portability.py  demo_validation.py
ontologies/: employee_offboarding.ttl  procurement.ttl  procurement_shacl.ttl
src/owl_portability/: __init__.py  layer.py
src/owl_portability/adapters/: __init__.py  agentcore.py  base.py  fabric_iq.py  google_knowledge_catalog.py  mcp_adapter.py  palantir.py  servicenow.py
src/owl_portability/utils/: __init__.py  rdf_builder.py  shacl_reporter.py
src/owl_portability/validators/: __init__.py  offboarding_validator.py
tests/: __init__.py  conftest.py  test_adapters.py  test_agentcore_adapter.py  test_layer.py  test_offboarding_validator.py  test_servicenow_adapter.py  test_shacl_constraints.py
